--- a/README.rdoc
+++ b/README.rdoc
@@ -1,39 +1,36 @@
 == Ruby Library for ExactTarget
 
-  This is an attempt to make integrating easier with ExactTarget.  ExactTarget is 
-  an email newsletter system designed to make it easy to setup timely newsletters.
-  
-  Exact Target: http://www.exacttarget.com/
-  
-  Exact Target API:
-  http://developers.exacttarget.com/Web/help/Overview/Introduction_to_ExactTarget_API_Help.htm
+This is an attempt to make integrating easier with ExactTarget.  ExactTarget is an email newsletter system designed to make it easy to setup timely newsletters.
+
+- Exact Target: http://www.exacttarget.com/
+- Exact Target API: http://wiki.memberlandingpages.com/API_References/Web_Service_Guide
 
 == Adding rbet to a Rails Project
-  
-  If you are using Git to manage your rails project and would like to add rbet as a submodule:
-  
-    git submodule add git://github.com/sbraford/rbet.git vendor/rbet
-    
-  Then in the bottom of your environment.rb, or in an initializer, add:
 
-    require File.join(RAILS_ROOT, 'vendor', 'rbet', 'lib', 'et.rb')
+[n3bulous] I moved this over to a gem on gemcutter.  They don't appear to support namespacing yet.
+
+  sudo gem install rbet
 
 == Development Notes
-  
-  Original development work was performed by Todd A. Fisher.
-  
-  Forking development to GitHub + minor development additions/changes by Shanti A. Braford.
-  
+
+- Original development work was performed by Todd A. Fisher.
+- Forking development to GitHub + minor development additions/changes by Shanti A. Braford.
+
 == Contributing
 
-  If you'd like to contribute, fork a copy of the repo on GitHub.
-  
-  When you have patch(es) ready, contact me at:shantibraford@gmail.com
+If you'd like to contribute, fork a copy of the repo on GitHub.  When you have patch(es) ready, contact me at:shantibraford@gmail.com
+
+Forkers:
+
+- http://github.com/sbraford/rbet/
+- http://github.com/frogmetrics/rbet
+- http://github.com/BDQ/rbet
+- http://github.com/n3bulous/rbet
 
 == Notes
 
-  2000 character limit for each attribute
+- 2000 character limit for each attribute
 
 == Win32 Notes
 
-  This has not been tested on Windows.  May the force be with you, young win32 jedi =)
+This has not been tested on Windows.  May the force be with you, young win32 jedi =)
